<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:contentDescription="@string/home_image"
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/relative"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/first_page_bg" />

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/tv_Who_are_you"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="15dp"
            android:text="Who are You\nShopping for Today?"
            android:textColor="@color/black"
            android:textSize="23sp" />

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_Who_are_you"
            android:orientation="horizontal"
            android:padding="15dp"
            android:baselineAligned="false"
            android:weightSum="3">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cd_boy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:cardCornerRadius="100dp">

                    <ImageButton
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/boy"
                        android:background="@drawable/circle_bg"
                        android:src="@drawable/askboy" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/boy"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cd_girl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:cardCornerRadius="100dp">

                    <ImageButton
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/girl"
                        android:background="@drawable/circle_bg"
                        android:src="@drawable/askgirl" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/girl"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cd_expecting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    app:cardCornerRadius="100dp">

                    <ImageButton
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:scaleType="centerCrop"
                        android:contentDescription="@string/expecting"
                        android:background="@drawable/circle_bg"
                        android:src="@drawable/askwoman" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/expecting"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_below="@id/linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:weightSum="2">

            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_already_registered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:text="@string/already_registered"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:gravity="end" />

            <TextView
                android:id="@+id/tv_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/sign_in"
                android:textColor="#234FD3"
                android:textSize="15sp" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>